# homework8

./: .gitignore  CMakeLists.txt  README.md  bayan.cpp  bayan.h  hasher.cpp  hasher.h  main.cpp  test_bayan_gtest.cpp  utils.cpp  utils.h
.github/workflows/: release.yml
test/1/2/: 2.doc
